Виставив екзамен БВ211

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <td><a href="https://bogachukmax.github.io" target="_blank">https://bogachukmax.github.io/</a></td>
         <td><a href="https://github.com/bogachukmax" target="_blank">https://github.com/bogachukmax</a></td>
         <td><a href="http://bogacukmax.rf.gd/" target="_blank">http://bogacukmax.rf.gd/</a></td>
-        <td align="center">0</td>
+        <td align="center">12</td>
       </tr>
       <tr>
         <td width="30" align="center">3</td>
@@ -290,13 +290,13 @@
         <td><a href="https://komarbv211.github.io" target="_blank">https://komarbv211.github.io/</a></td>
         <td><a href="https://github.com/komarbv211" target="_blank">https://github.com/komarbv211</a></td>
         <td><a href="http://komar.rf.gd/" target="_blank">http://komar.rf.gd/</a></td>
-        <td align="center">0</td>
+        <td align="center">12</td>
       </tr>
       <tr>
         <td width="30" align="center">5</td>
         <td width="230">Костелецький Максим  </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://MaximKOSte.github.io" target="_blank">https://MaximKOSte.github.io/</a></td>
+        <td><a href="https://github.com/MaximKOSte" target="_blank">https://github.com/MaximKOSte</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>
@@ -306,7 +306,7 @@
         <td><a href="https://Sasha01M.github.io" target="_blank">https://Sasha01M.github.io/</a></td>
         <td><a href="https://github.com/Sasha01M" target="_blank">https://github.com/Sasha01M</a></td>
         <td><a href="http://mazur.rf.gd/" target="_blank">http://mazur.rf.gd/</a></td>
-        <td align="center">0</td>
+        <td align="center">7</td>
       </tr>
       <tr>
         <td width="30" align="center">7</td>
@@ -314,7 +314,7 @@
         <td><a href="https://dimamironuk.github.io" target="_blank">https://dimamironuk.github.io/</a></td>
         <td><a href="https://github.com/dimamironuk" target="_blank">https://github.com/dimamironuk</a></td>
         <td><a href="http://mironuk.rf.gd/" target="_blank">http://mironuk.rf.gd/</a></td>
-        <td align="center">0</td>
+        <td align="center">10</td>
       </tr>
       <tr>
         <td width="30" align="center">8</td>
@@ -322,7 +322,7 @@
         <td><a href="https://nitesw.github.io" target="_blank">https://nitesw.github.io/</a></td>
         <td><a href="https://github.com/nitesw" target="_blank">https://github.com/nitesw</a></td>
         <td><a href="http://pedos.rf.gd/" target="_blank">http://pedos.rf.gd/</a></td>
-        <td align="center">0</td>
+        <td align="center">8</td>
       </tr>
       <tr>
         <td width="30" align="center">9</td>
@@ -330,7 +330,7 @@
         <td><a href="https://NiFFox2q.github.io" target="_blank">https://NiFFox2q.github.io/</a></td>
         <td><a href="https://github.com/NiFFox2q" target="_blank">https://github.com/NiFFox2q</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
-        <td align="center">0</td>
+        <td align="center">7</td>
       </tr>
       <tr>
         <td width="30" align="center">10</td>
@@ -362,16 +362,9 @@
         <td><a href="https://volodatrof.github.io" target="_blank">https://volodatrof.github.io/</a></td>
         <td><a href="https://github.com/volodatrof" target="_blank">https://github.com/volodatrof</a></td>
         <td><a href="trofimchuk.42web.io" target="_blank">trofimchuk.42web.io</a></td>
-        <td align="center">0</td>
+        <td align="center">10</td>
       </tr>
-      <tr>
-        <td width="30" align="center">14</td>
-        <td width="230">Шпінда Ілля   </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
-        <td align="center">0</td>
-      </tr>     
+     
     </table>
     <hr>
 <h1 align="center">Сайти Групи НБР211<h1>
