--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
       <tr>
         <td width="30" align="center">3</td>
         <td width="230">Вакулін Денис  </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://denysvakulin.github.io" target="_blank">https://denysvakulin.github.io/</a></td>
+        <td><a href="https://github.com/denysvakulin" target="_blank">https://github.com/denysvakulin</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>
