Виставив екзамен БВ211-5

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <td><a href="https://MaximKOSte.github.io" target="_blank">https://MaximKOSte.github.io/</a></td>
         <td><a href="https://github.com/MaximKOSte" target="_blank">https://github.com/MaximKOSte</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
-        <td align="center">0</td>
+        <td align="center">7</td>
       </tr>
       <tr>
         <td width="30" align="center">6</td>
@@ -321,8 +321,8 @@
         <td width="230">Педос Андрій</td>
         <td><a href="https://nitesw.github.io" target="_blank">https://nitesw.github.io/</a></td>
         <td><a href="https://github.com/nitesw" target="_blank">https://github.com/nitesw</a></td>
-        <td><a href="http://pedos.rf.gd/" target="_blank">http://pedos.rf.gd/</a></td>
-        <td align="center">8</td>
+        <td><a href="http://pedos.infinityfreeapp.com/" target="_blank">http://pedos.infinityfreeapp.com/</a></td>
+        <td align="center">10</td>
       </tr>
       <tr>
         <td width="30" align="center">9</td>
