--- a/index.html
+++ b/index.html
@@ -437,8 +437,8 @@
       <tr>
         <td width="30" align="center">8</td>
         <td width="230">Майлат Анастасія  </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://usermailat.github.io" target="_blank">https://usermailat.github.io/</a></td>
+        <td><a href="https://github.com/usermailat" target="_blank">https://github.com/usermailat</a></td>
         <td><a href="http://maylat.great-site.net/" target="_blank">http://maylat.great-site.net/</a></td>
         <td align="center">0</td>
       </tr>  
