--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         <td width="230"> Гуц Василь</td>
         <td><a href="https://vasiliygts.github.io" target="_blank">https://vasiliygts.github.io/</a></td>
         <td><a href="https://github.com/vasiliygts" target="_blank">https://github.com/vasiliygts</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://vasgts.infinityfreeapp.com/" target="_blank">http://vasgts.infinityfreeapp.com/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -447,7 +447,7 @@
         <td width="230">Сульжик Станіслав  </td>
         <td><a href="https://KaTaLkA.github.io" target="_blank">https://KaTaLkA.github.io/</a></td>
         <td><a href="https://github.com/KaTaLkA" target="_blank">https://github.com/KaTaLkA</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://suljik.great-site.net" target="_blank">http://suljik.great-site.net/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
