--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
         <td><a href="https://vlad0607.github.io" target="_blank">https://vlad0607.github.io/</a></td>
         <td><a href="https://github.com/vlad0607" target="_blank">https://github.com/vlad0607</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
-        <td align="center">0</td>
+        <td align="center">8</td>
       </tr>    
       <tr>
         <td width="30" align="center">2</td>
@@ -400,7 +400,7 @@
         <td><a href="https://vasiliygts.github.io" target="_blank">https://vasiliygts.github.io/</a></td>
         <td><a href="https://github.com/vasiliygts" target="_blank">https://github.com/vasiliygts</a></td>
         <td><a href="http://vasgts.infinityfreeapp.com/" target="_blank">http://vasgts.infinityfreeapp.com/</a></td>
-        <td align="center">0</td>
+        <td align="center">11</td>
       </tr>  
       <tr>
         <td width="30" align="center">4</td>
@@ -408,7 +408,7 @@
         <td><a href="https://zaietsvlad.github.io" target="_blank">https://zaietsvlad.github.io/</a></td>
         <td><a href="https://github.com/zaietsvlad" target="_blank">https://github.com/zaietsvlad</a></td>
         <td><a href="http://zaietsvlad.great-site.net/" target="_blank">http://zaietsvlad.great-site.net/</a></td>
-        <td align="center">0</td>
+        <td align="center">7</td>
       </tr>  
       <tr>
         <td width="30" align="center">5</td>
@@ -416,7 +416,7 @@
         <td><a href="https://yrkov.github.io" target="_blank">https://yrkov.github.io/</a></td>
         <td><a href="https://github.com/yrkov" target="_blank">https://github.com/yrkov</a></td>
         <td><a href="http://kovshyriy.great-site.net/" target="_blank">http://kovshyriy.great-site.net/</a></td>
-        <td align="center">0</td>
+        <td align="center">12</td>
       </tr>  
       <tr>
         <td width="30" align="center">6</td>
@@ -424,13 +424,13 @@
         <td><a href="https://andrikonon.github.io" target="_blank">https://andrikonon.github.io/</a></td>
         <td><a href="https://github.com/andrikonon" target="_blank">https://github.com/andrikonon</a></td>
         <td><a href="http://andrikonon.great-site.net" target="_blank">http://andrikonon.great-site.net/</a></td>
-        <td align="center">0</td>
+        <td align="center">11</td>
       </tr>  
       <tr>
         <td width="30" align="center">7</td>
         <td width="230">Красовський Богдан  </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://bobohastler.github.io" target="_blank">https://bobohastler.github.io/</a></td>
+        <td><a href="https://github.com/bobohastler" target="_blank">https://github.com/bobohastler</a></td>
         <td><a href="http://bobohastler.great-site.net" target="_blank">http://bobohastler.great-site.net/</a></td>
         <td align="center">0</td>
       </tr>  
@@ -440,7 +440,7 @@
         <td><a href="https://usermailat.github.io" target="_blank">https://usermailat.github.io/</a></td>
         <td><a href="https://github.com/usermailat" target="_blank">https://github.com/usermailat</a></td>
         <td><a href="http://maylat.great-site.net/" target="_blank">http://maylat.great-site.net/</a></td>
-        <td align="center">0</td>
+        <td align="center">11</td>
       </tr>  
       <tr>
         <td width="30" align="center">9</td>
@@ -448,7 +448,7 @@
         <td><a href="https://KaTaLkA.github.io" target="_blank">https://KaTaLkA.github.io/</a></td>
         <td><a href="https://github.com/KaTaLkA" target="_blank">https://github.com/KaTaLkA</a></td>
         <td><a href="http://suljik.great-site.net" target="_blank">http://suljik.great-site.net/</a></td>
-        <td align="center">0</td>
+        <td align="center">12</td>
       </tr>  
       <tr>
         <td width="30" align="center">10</td>
