--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
       <tr>
         <td width="30" align="center">2</td>
         <td width="230">Гаспарян Армен </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://ArmenGaspar.github.io" target="_blank">https://ArmenGaspar.github.io/</a></td>
+        <td><a href="https://github.com/ArmenGaspar" target="_blank">https://github.com/ArmenGaspar</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
