--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                 <td><a href="https://ivaninandrii.github.io" target="_blank">https://ivaninandrii.github.io/</a></td>
                 <td><a href="https://github.com/ivaninandrii" target="_blank">https://github.com/ivaninandrii</a></td>
                 <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
-                <td align="center">0</td>
+                <td align="center">7</td>
               </tr>    
               <tr>
                 <td width="30" align="center">2</td>
@@ -580,14 +580,14 @@
                 <td><a href="https://arhias.github.io" target="_blank">https://arhias.github.io/</a></td>
                 <td><a href="https://github.com/arhias" target="_blank">https://github.com/arhias</a></td>
                 <td><a href="http://arhias.lovestoblog.com/" target="_blank">http://arhias.lovestoblog.com/</a></td>
-                <td align="center">0</td>
+                <td align="center">9</td>
               </tr>    
               <tr>
                 <td width="30" align="center">3</td>
                 <td width="230">Василишин Павло  </td>
-                <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-                <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
-                <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+                <td><a href="https://pashhun1.github.io" target="_blank">https://pashhun1.github.io/</a></td>
+                <td><a href="https://github.com/pashhun1" target="_blank">https://github.com/pashhun1</a></td>
+                <td><a href="http://pashhun.great-site.net/" target="_blank">http://pashhun.great-site.net/</a></td>
                 <td align="center">0</td>
               </tr>    
               <tr>
